--- a/app/views/translations/_inline_edit.html.erb
+++ b/app/views/translations/_inline_edit.html.erb
@@ -1,6 +1,6 @@
 
-<%= include_tiny_mce_if_needed %>
-<%#= wide_tagged_tinymce_script %>
+<%#= include_tiny_mce_if_needed %>
+<%##= wide_tagged_tinymce_script %>
 
 <%= form_for(:translation, :url => inline_update_translation_path(@translation, :field => params[:field], :div_suffix => params[:div_suffix]), :remote =>true) do |f| %>
 <p>
@@ -9,6 +9,8 @@
 		data = Category.find(184)
 	    language_type = data.children.collect {|l| [ h(l.title), l.id ] } %>
  		<%= f.select(:language_type_id, language_type, { :include_blank => true }) %>
+<% 	when 'image', 'image_caption', 'image_photographer','image_link', 'audio', 'audio_id_number', 'audio_speaker', 'audio_date', 'audio_place_of_recording', 'audio_link', 'video', 'video_id_number', 'video_speaker', 'video_date', 'video_place_of_recording', 'video_link'  then %>
+		<%= f.text_field params[:field] %>
 <%	else %>
 		<%= f.text_area params[:field], :class => 'mceEditor'  %>
 <% end %>
